@@ -4,6 +4,7 @@ core 2.1.4 - not released yet
 	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
 	* Added: TodoyuCountry::getIsoNumCurrency()
 	* Added: TodoyuFormElement::getStorageDataInternal() to override storageData properly
+	* Added: TodoyuDatabase::quoteTablename() (currently alias of quoteFieldName()). Cleanup quoteFieldName()
 
 core 2.1.3 - 2011-11-17
 	* Bugfix: System URL was set wrong on windows systems
